<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>hk.zdl.crpto</groupId>
	<artifactId>pearletj</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>pearletj</name>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.17</source>
					<target>1.17</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<appendAssemblyId>true</appendAssemblyId>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<archive>
						<manifest>
							<mainClass>hk.zdl.crypto.pearlet.Main</mainClass>
							<addDefaultImplementationEntries>true</addDefaultImplementationEntries>
						</manifest>
						<manifestEntries>
							<SplashScreen-Image>splash.png</SplashScreen-Image>
						</manifestEntries>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>assembly</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>jitpack.io</id>
			<url>https://jitpack.io</url>
		</repository>
		<repository>
			<id>jfrog-snapshots</id>
			<name>oss.jfrog.org</name>
			<url>https://oss.jfrog.org/libs-snapshot/</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository>
	</repositories>
	<dependencies>
		<!-- local DB -->
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derby</artifactId>
			<version>10.15.2.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.derby</groupId>
			<artifactId>derbytools</artifactId>
			<version>10.16.1.1</version>
		</dependency>

		<dependency>
			<groupId>com.mchange</groupId>
			<artifactId>c3p0</artifactId>
			<version>0.9.5.5</version>
		</dependency>
		<!-- GUI relative -->
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>com.formdev</groupId>
			<artifactId>flatlaf-extras</artifactId>
			<version>2.3</version>
		</dependency>
		<dependency>
			<groupId>org.swinglabs</groupId>
			<artifactId>swingx</artifactId>
			<version>1.6.1</version>
		</dependency>
		<dependency>
			<groupId>com.github.Dansoftowner</groupId>
			<artifactId>jSystemThemeDetector</artifactId>
			<version>3.6</version>
		</dependency>
		<!-- API backend-->
		<dependency>
			<groupId>com.github.signum-network</groupId>
			<artifactId>signumj</artifactId>
			<version>v1.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.web3j</groupId>
			<artifactId>core</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.web3j</groupId>
			<artifactId>crypto</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.web3j</groupId>
			<artifactId>utils</artifactId>
			<version>5.0.0</version>
		</dependency>
		<dependency>
			<groupId>org.web3j</groupId>
			<artifactId>contracts</artifactId>
			<version>5.0.0</version>
		</dependency>
		<!-- Utilities -->
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>20220320</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.8.0</version>
		</dependency>
		<dependency>
			<groupId>org.greenrobot</groupId>
			<artifactId>eventbus-java</artifactId>
			<version>3.3.1</version>
		</dependency>
		<dependency>
			<groupId>net.harawata</groupId>
			<artifactId>appdirs</artifactId>
			<version>1.2.1</version>
		</dependency>
		<!-- jfinal -->
		<dependency>
			<groupId>com.jfinal</groupId>
			<artifactId>jfinal</artifactId>
			<version>5.0.0</version>
		</dependency>
		<!-- svg -->
		<dependency>
			<groupId>com.twelvemonkeys.imageio</groupId>
			<artifactId>imageio-batik</artifactId>
			<version>3.2.1</version>
		</dependency>
		<dependency>
			<groupId>batik</groupId>
			<artifactId>batik-transcoder</artifactId>
			<version>1.6-1</version>
		</dependency>
		<dependency>
			<groupId>net.glxn</groupId>
			<artifactId>qrgen</artifactId>
			<version>1.2</version>
		</dependency>
		<!-- loggings -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-slf4j-impl</artifactId>
			<version>2.18.0</version>
		</dependency>

	</dependencies>
</project>